--- a/style/style.css
+++ b/style/style.css
@@ -1,25 +1,38 @@
-.container{
-    align-items: center;
+*{
+    margin: 0;
+    padding: 0;
 }
-.banner{
-    display: flex;
+
+header{
+    color: rgb(255, 255, 255);
+}
+.header-box{  
+   height: 600px;
     width: 1320px;
-    height: 600px;
-    background-image:url(../resources/BannerImage.png);
+    background-image: url("../resources/BannerImage.png");
+    display: flex;
     justify-content: center;
     align-items: center;
 }
-.sub-tile{
-    text-align: center;
-    align-items: center;
-  font-size: 32px;
-  color: white;
-}
+
 .title{
+   text-align: center;
+   align-items:center;
+}
+.title p{
+    font-size: 32px;
+    color: rgba(255, 255, 255, 0.899);
+    font-family: Merriweather;
+    font-weight: 400;
+}
+.title h1{
     font-size: 72px;
-    color: white;
+    color: rgba(255, 255, 255, 0.901);
+    font-family: Merriweather;
+    font-weight: 400;
 }
 .off{
+    margin-top: 50px;
 color: #FF0000;
  font-size: 88px;
  font-family: Inter;
@@ -28,16 +41,22 @@ text-align: center;
 }
 
 .our{
-color: #FF0000;
+    margin-top: 50px;
+ color: #FF0000;
  font-size: 24px;
  font-family: Inter;
  font-weight: 500;
  text-align: center;
 }
 .all{ 
+    margin-top: 50px;
 color: #070211;
  font-size: 48px;
  font-family: Inter;
  font-weight: 700;
  text-align: center;
+}
+img{
+    justify-content: center;
+    align-items: center;
 }
